[tool.poetry]
name = "PYDSA"
version = "0.0.1"
description = "Python DSA"
authors = ["Raymond"]
packages = [
    { include = "py_dsa" },
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Python Developer",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-mock = "^3.11.1"


[build-system]
requires = ["setuptools<65.5.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"